# turbovec

./: .gitignore  CHANGELOG.md  Cargo.toml  SESSION_SUMMARY.md  rag_demo.py
docs/: api.md
docs/integrations/: agno.md  haystack.md  langchain.md  llama_index.md
rag_docs/: embedding_guide.txt  faiss_comparison.txt  hybrid_search.txt  rag_concepts.txt  simd_kernel.md  turboquant_algorithm.txt  turbovec_intro.txt  turbovec_rag_architecture.md  vector_quantization_basics.txt
turbovec/: Cargo.toml
turbovec-python/: Cargo.toml  pyproject.toml
turbovec-python/python/turbovec/mlx/: __init__.py  _io.py
turbovec-python/src/: lib.rs
turbovec-python/tests/: test_mlx.py
turbovec-rag/: Cargo.toml  build.rs
turbovec-rag/src/: embed.rs  embed_cache.rs  main.rs  rag.rs  routes.rs
turbovec-rag/static/: index.html
turbovec/src/: error.rs  lib.rs
