[package]
name = "turbovec-python"
version = "0.5.1"
edition = "2021"
rust-version = "1.70"

[lib]
name = "_turbovec"
crate-type = ["cdylib"]

[dependencies]
turbovec-core = { package = "turbovec", path = "../turbovec" }
pyo3 = { version = "0.27.0", features = ["extension-module", "abi3-py39"] }
numpy = "0.27.0"
