[package]
name = "turbovec-rag"
version = "0.1.0"
edition = "2021"
description = "RAG web app built on turbovec vector search"

[dependencies]
turbovec = { path = "../turbovec" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
regex = "1"
futures-util = "0.3"
tokio-stream = "0.1"