[package]
name = "turbovec"
version = "0.4.1"
edition = "2021"
rust-version = "1.70"
description = "Fast vector quantization with 2-4 bit compression and SIMD search"
license = "MIT"
repository = "https://github.com/RyanCodrai/turbovec"
homepage = "https://github.com/RyanCodrai/turbovec"
readme = "../README.md"
keywords = ["vector-search", "quantization", "nearest-neighbor", "ann", "simd"]
categories = ["algorithms", "science", "compression"]

[dependencies]
ndarray = "0.17"
rayon = "1.10"
ordered-float = "4"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
statrs = "0.17"
faer = "0.20"

[target.'cfg(target_os = "macos")'.dependencies]
ndarray = { version = "0.17", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "linux")'.dependencies]
ndarray = { version = "0.17", features = ["blas"] }
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", default-features = false, features = ["system"] }

